Fully reset search params when receiving them from document.location

--- a/app/views/categories/_category_nav.html.erb
+++ b/app/views/categories/_category_nav.html.erb
@@ -4,7 +4,6 @@
     centre_products_path(
       :category => category.code, :super_cat => super_cat.code
     ),
-    :class => "btn btn--full btn--full-left",
-    :target => '_self'
+    :class => "btn btn--full btn--full-left"
   )
 %></li>
