WSF-5571: Fix price product filter UI breaking

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -304,7 +304,7 @@
                   <input ng-model="search.price.values.range_start" ng-change="rangeFilter('price')" id="price-range-start" class="txt-input">
                   <span>to</span>
                   <label class="hide-visually" for="price-range-end">Price range end</label>
-                  <input ng-model="search.price.values.range_end" ng-change="rangeFilter('price')" id="price-range-end" class="txt-input">
+                  <input ng-model="search.price.values.range_end" ng-change="rangeFilter('price')" id="price-range-end" class="txt-input drop-down-menu__range__end">
                 </div>
 
                 <button toggle-visibility="filters" ng-click="updateSearch()" class="btn btn--main drop-down-menu__apply">Apply</button>
