--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -8,7 +8,7 @@
           <span class="icon icon--search" aria-hidden="true"></span>
           <label for="global-search" class="hide-visually">Search site</label>
           <input type="hidden" ng-model="centre" value="<%= params[:centre_id] || params[:id] %>">
-          <input ng-model="searchQuery" ng-blur="hideSuggestions()" ng-focus="makeSuggestions()" ng-keyup="makeSuggestions($event)" ng-keydown="navigateSuggestions($event)" type="search" class="search-mini__input" id="global-search" name="search_query" autocomplete="off" placeholder="Search products&#8230;">
+          <input ng-model="searchQuery" ng-blur="hideSuggestions()" ng-focus="makeSuggestions()" ng-keyup="makeSuggestions($event)" ng-keydown="navigateSuggestions($event)" type="search" class="search-mini__input" id="global-search" name="search_query" autocomplete="off" placeholder="Search stores &amp; products&#8230;">
           <input type="submit" value="Search" ng-hide="true" class="search-mini__submit">
           <em ng-if="suggestions" ng-pluralize count="suggestions.length" when="searchResultText()" role="status" aria-live="polite" class="hide-visually"></em>
         <% end %>
