--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -208,4 +208,5 @@
       }
     }
 
-    .drop-down-menu__range__end {float: right;}
+      /* `.txt-input` for inputting the end of range value */
+      .drop-down-menu__range__end {float: right;}
