--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -1,6 +1,6 @@
 <li class="drop-down-menu drop-down-container drop-down-container--hover">
   <%=
-    attrs = {}
+    attrs = {'ng-class' => "{'is-active': (activeNavigationItem == '#{category.code}')}"}
     if category.has_code?(params[:super_cat])
       attrs[:class] = 'is-active'
     end
