--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="section-nav container container--wide container--dark">
+<div ng-controller="ActiveCategoryNavController" class="section-nav container container--wide container--dark">
 
   <%# Section nav %>
   <div class="container container--position">
