WSF-5691: Make all external links open in new window/tab

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -43,7 +43,7 @@
             </a>
           </li>
           <li>
-            <a href="http://www.westfieldgiftcards.com.au" rel="external">
+            <a href="http://www.westfieldgiftcards.com.au" rel="external" target="_blank">
               <span class="icon icon--gift-card" aria-hidden="true"></span>Buy Gift Cards
             </a>
           </li>
@@ -131,29 +131,29 @@
     <div class="container">
       <ul class="national__footer__nav horiz-list--slash">
         <li>
-          <%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external' %>
+          <%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external', target: '_blank' %>
         </li>
         <li>
           <a href="<%= root_path %>"><abbr title="Australia">AU</abbr></a>
         </li>
         <li>
-          <a href="http://www.westfield.co.nz/" rel="external"><abbr title="New Zealand">NZ</abbr></a>
+          <a href="http://www.westfield.co.nz/" rel="external" target="_blank"><abbr title="New Zealand">NZ</abbr></a>
         </li>
         <li>
-          <a href="http://uk.westfield.com/" rel="external"><abbr title="United Kingdom">UK</abbr></a>
+          <a href="http://uk.westfield.com/" rel="external" target="_blank"><abbr title="United Kingdom">UK</abbr></a>
         </li>
         <li>
-          <a href="http://www.westfield.com/" rel="external"><abbr title="United States of America">USA</abbr></a>
+          <a href="http://www.westfield.com/" rel="external" target="_blank"><abbr title="United States of America">USA</abbr></a>
         </li>
         <li>
-          <%= link_to 'Jobs', 'http://corporate.westfield.com/careers/', rel: 'external' %>
+          <%= link_to 'Jobs', 'http://corporate.westfield.com/careers/', rel: 'external', target: '_blank' %>
         </li>
         <li>
-          <%= link_to 'Our Community', 'http://corporate.westfield.com/about/sustainability/', rel: 'external' %>
+          <%= link_to 'Our Community', 'http://corporate.westfield.com/about/sustainability/', rel: 'external', target: '_blank' %>
         </li>
-        <!-- <li>
-          <%= link_to 'Media', 'http://media.westfield.com.au', rel: 'external' %>
-        </li> -->
+        <%#<li>%>
+          <%#= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %>
+        <%#</li>%>
       </ul>
 
       <nav role="navigation" class="national__footer__nav">
