--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -123,7 +123,7 @@
 
     <h3>Further information regarding Australian Privacy Legislation</h3>
 
-    <p>If you would like further information relating to the Australian Privacy Legislation and the National Privacy Principles, please visit <%= link_to 'www.privacy.gov.au', 'http://www.privacy.gov.au' %>.</p>
+    <p>If you would like further information relating to the Australian Privacy Legislation and the National Privacy Principles, please visit <%= link_to 'www.privacy.gov.au', 'http://www.privacy.gov.au', rel: 'external', target: '_blank' %>.</p>
 
     <h3>Westfield Contact</h3>
 
@@ -134,7 +134,7 @@
       <li>we have breached our privacy obligations or your privacy rights in any way; or</li>
       <li>you would like to discuss any issues about our privacy policy.</li>
     </ul>
-    
+
     <p>You can contact Westfield's Privacy Officer on (ph) <a href="tel:(02)93587000">02 9358 7000</a>, via email at <%= mail_to 'privacy@au.westfield.com' %>, or in writing to: Privacy Officer, Westfield Group, Level 30, 85 Castlereagh Street, Sydney, NSW 2000.</p>
 
     <h2 id="online-privacy-policy">Westfield Online Privacy Policy</h2>
@@ -163,7 +163,7 @@
       <li>submit your Resume to us for consideration of job vacancies; and</li>
       <li>tell us about your shopping experiences at Westfield by completing a customer service survey.</li>
     </ul>
-      
+
     <p>We collect this information in order to facilitate your access to the Site and the functionality provided by the Site. If you do not provide us with this information, we may not be able to provide you with access to all or part of the Site or functionality offered through the Site. In addition to the purposes set out above, this information may be used by Westfield in connection with the management and security of the Westfield shopping centres and the operation of the Site generally, and may be provided to law enforcement and government bodies, insurers, Westfield staff and subcontractors, third parties who provide Westfield with services from time to time and retailers for these purposes.
     If you submit your Resume to us, we will keep it in a database for consideration of particular jobs that arise within Westfield.</p>
 
@@ -244,9 +244,9 @@
     other purposes connected with westfield.com. If you do not want adservers or other third party advertisers to use cookies to provide you with targeted advertising, we suggest you use an opt out mechanism which can be found on:</p>
 
     <ul>
-      <li>the Network Advertising Initiative opt-out provided through <%= link_to 'http://www.networkadvertising.org/choices/DAA', 'http://www.networkadvertising.org/choices/DAA', rel: 'external' %>;</li>
-      <li>the Digital Advertising Alliance opt-out provided through <%= link_to 'http://www.aboutads.info/choices/', 'http://www.aboutads.info/choices/', rel: 'external' %>; or</li>
-      <li>the Interactive Advertising Bureau (EU) opt-out provided through <%= link_to 'http://www.youronlinechoices.eu', 'http://www.youronlinechoices.eu', rel: 'external' %>.</li>
+      <li>the Network Advertising Initiative opt-out provided through <%= link_to 'http://www.networkadvertising.org/choices/DAA', 'http://www.networkadvertising.org/choices/DAA', rel: 'external', target: '_blank' %>;</li>
+      <li>the Digital Advertising Alliance opt-out provided through <%= link_to 'http://www.aboutads.info/choices/', 'http://www.aboutads.info/choices/', rel: 'external', target: '_blank' %>; or</li>
+      <li>the Interactive Advertising Bureau (EU) opt-out provided through <%= link_to 'http://www.youronlinechoices.eu', 'http://www.youronlinechoices.eu', rel: 'external', target: '_blank' %>.</li>
     </ul>
 
     <h3>Tips on sending us information</h3>
