--- a/app/views/shared/micello_maps/_map.html.erb
+++ b/app/views/shared/micello_maps/_map.html.erb
@@ -1,4 +1,4 @@
-<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external">Visit here</a> for instructions on how to enable JavaScript.</p>
+<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
 
 <!--[if lte IE 8]>
   <div id="map-micello-api" class="map-micello__api map-micello-oldie js-disabled-hide">
