--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -51,7 +51,7 @@
               <span itemprop="addressRegion"><%= @centre.state %> <%= @centre.postcode %></span>
             </span>
           </p>
-          <%= link_to "https://maps.google.com/maps?q=#{@centre.latitude},#{@centre.longitude}", rel: 'external' do %>
+          <%= link_to "https://maps.google.com/maps?q=#{@centre.latitude},#{@centre.longitude}", rel: 'external', target: '_blank' do %>
             Open in Google Maps <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
           <% end -%>
         </div>
