--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -32,7 +32,7 @@
               <%= phone_link @concierge.phone_no, class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
                 <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
                 <strong>Call Concierge Desk</strong>
-              <% end %> 
+              <% end %>
             </span>
             <%# //Show CTA button for centre contact number for palm %>
           </div>
@@ -61,20 +61,20 @@
 
           <%# [BACKEND] When gift card filter is done:
             - Remove the section marked "Temp fix"
-            - uncomment the section marked as "Uncomment when gift card filter is done" and add the link to store index page filtered by gift card. 
+            - uncomment the section marked as "Uncomment when gift card filter is done" and add the link to store index page filtered by gift card.
           %>
           <%# Temp fix %>
           <div class="grid">
             <div class="grid__item one-whole non-palm-two-fifths">
-              <a href="http://www.westfieldgiftcards.com.au/" rel="external" class="btn btn--main btn--main-alt btn--full">Buy Now</a>
+              <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--main btn--main-alt btn--full">Buy Now</a>
             </div>
           </div>
           <%# //Temp fix %>
-          
+
           <%# Uncomment when gift card filter is done %>
           <%#<div class="grid grid--gutter-half grid--table-non-palm">
             <div class="grid__item one-whole non-palm-two-fifths">
-              <a href="http://www.westfieldgiftcards.com.au/" rel="external" class="btn btn--main btn--main-alt btn--full">Buy Now</a>
+              <a href="http://www.westfieldgiftcards.com.au/" rel="external" target="_target" class="btn btn--main btn--main-alt btn--full">Buy Now</a>
             </div>%>
             <%#<div class="grid__item one-whole non-palm-three-fifths">%>
               <%#or%> <%#= link_to 'redeem at these stores', '#' %>
@@ -90,7 +90,7 @@
 </div>
 <%# //Divider %>
 
-<%= render "shared/footer_promo_tiles", 
+<%= render "shared/footer_promo_tiles",
   promo_tile_1: {
     image_src: "promo-tiles/promo-tile-01.jpg",
     icon: "icon--hours",
