--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,22 +49,22 @@
 					<% if social_media.present? && header_hero? %>
 					<ul class="nav-social-follow horiz-list">
 						<% if @centre.facebook.present? %>
-						<li><a href="<%= @centre.facebook %>" target="_blank" rel="external"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.facebook %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.twitter.present? %>
-						<li><a href="<%= @centre.twitter %>" target="_blank" rel="external"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.twitter %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.instagram.present? %>
-						<li><a href="<%= @centre.instagram %>" target="_blank" rel="external"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.instagram %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.pinterest.present? %>
-						<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.youtube.present? %>
-						<li><a href="<%= @centre.youtube %>" target="_blank" rel="external"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.youtube %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.google_plus.present? %>
-						<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 					</ul>
 					<% end %>
@@ -84,22 +84,22 @@
 					<% if social_media.present? %>
 					<ul class="nav-social-follow horiz-list">
 						<% if @centre.facebook.present? %>
-						<li><a href="<%= @centre.facebook %>" target="_blank" rel="external"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.facebook %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Facebook</span><span class="icon icon--facebook icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.twitter.present? %>
-						<li><a href="<%= @centre.twitter %>" target="_blank" rel="external"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.twitter %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Twitter</span><span class="icon icon--twitter icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.instagram.present? %>
-						<li><a href="<%= @centre.instagram %>" target="_blank" rel="external"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.instagram %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Instagram</span><span class="icon icon--instagram icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.pinterest.present? %>
-						<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.pinterest %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Pinterest</span><span class="icon icon--pinterest icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.youtube.present? %>
-						<li><a href="<%= @centre.youtube %>" target="_blank" rel="external"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.youtube %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">YouTube</span><span class="icon icon--youtube icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 						<% if @centre.google_plus.present? %>
-						<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
+						<li><a href="<%= @centre.google_plus %>" target="_blank" rel="external" target="_blank"><span class="hide-visually">Google Plus</span><span class="icon icon--google-plus icon--xlrg icon--flush-top" aria-hidden="true"></span></a></li>
 						<% end %>
 					</ul>
 					<% end %>
@@ -108,9 +108,9 @@
 					<%# Tertiary navigation %>
 					<nav class="nav-tertiary" role="navigation" aria-label="Tertiary navigation">
 						<ul>
-							<li class="nav-buy-gift-cards"><%= link_to 'Buy Gift Cards', 'http://www.westfieldgiftcards.com.au', rel: 'external' %></li>
-							<li><%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external' %></li>
-							<!-- <li><%= link_to 'Media', 'http://media.westfield.com.au', rel: 'external' %></li> -->
+							<li class="nav-buy-gift-cards"><%= link_to 'Buy Gift Cards', 'http://www.westfieldgiftcards.com.au', rel: 'external', target: '_blank' %></li>
+							<li><%= link_to 'Westfield Group', 'http://corporate.westfield.com/', rel: 'external', target: '_blank' %></li>
+							<%#<li>%><%#= link_to 'Media', 'http://media.westfield.com.au', rel: 'external', target: '_blank' %><%#</li>%>
 							<li><%= link_to 'Terms &amp; Conditions'.html_safe, '/terms-conditions' %></li>
 							<li><%= link_to 'Privacy Policy', '/privacy-policy' %></li>
 						</ul>
@@ -130,7 +130,7 @@
 			<%# //Centre selector (tablet small) %>
 
 			<%# Gift Card link %>
-			<a href="http://www.westfieldgiftcards.com.au" rel="external" class="nav-buy-gift-cards--alt"><span class="icon icon--gift-card icon--spacing" aria-hidden="true"></span>Buy Gift Cards</a>
+			<a href="http://www.westfieldgiftcards.com.au" rel="external" target="_blank" class="nav-buy-gift-cards--alt"><span class="icon icon--gift-card icon--spacing" aria-hidden="true"></span>Buy Gift Cards</a>
 			<%# //Gift Card link %>
 
 			<%# Search toggle / favourites (palm) %>
