--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -69,7 +69,7 @@
 <% if @search.products.present? %>
   <div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="ng-cloak filters filters--pin-board">
 
-    <p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to use these product filters, as a fallback you can filter via the <strong>Product categories</strong> above. <a href="http://enable-javascript.com/" rel="external">Visit here</a> for instructions on how to enable JavaScript.</p>
+    <p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to use these product filters, as a fallback you can filter via the <strong>Product categories</strong> above. <a href="http://enable-javascript.com/" rel="external" target="_blank">Visit here</a> for instructions on how to enable JavaScript.</p>
 
     <div class="filters__filter-sort">
 
