WSF-5651: Move tabs to be inline script

--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -57,3 +57,14 @@
 
 </div>
 <%# // Tabs %>
+
+<%- content_for :javascript do -%>
+  <%# Run 'Tabs' plugin %>
+  <%= javascript_include_tag 'vendor/jquery.tabs' %>
+
+  <script>
+  $(function() {
+    $('.tabs').tabs();
+  });
+  </script>
+<%- end -%>
