--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -175,3 +175,14 @@
 
 </div>
 <%# //National landing page wrapper %>
+
+<%- content_for :javascript do -%>
+  <%# Run 'Tabs' plugin %>
+  <%= javascript_include_tag 'vendor/jquery.tabs' %>
+
+  <script>
+  $(function() {
+    $('.tabs').tabs();
+  });
+  </script>
+<%- end -%>
