WSF-5651: Move toggle content to be inline

--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -67,6 +67,9 @@
 <%# //Fine print %>
 
 <%- content_for :javascript do -%>
+  <%# Run 'Toggle content' plugin %>
+  <%= javascript_include_tag 'jquery-extensions/jquery.toggle-content' %>
+
   <script>
     $(function() {
 
