--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,7 +1,7 @@
 <!doctype html>
-<!--[if (lt IE 9) & (!IEMobile)]> <html class="no-js old-ie ie" lang="en">  <![endif]-->
-<!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie" lang="en">    <![endif]-->
-<!--[if gt IE 8]><!-->            <html class="no-js" lang="en">            <!--<![endif]-->
+<!--[if (lt IE 9) & (!IEMobile)]> <html class="no-js old-ie ie" lang="en-au">  <![endif]-->
+<!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie" lang="en-au">    <![endif]-->
+<!--[if gt IE 8]><!-->            <html class="no-js" lang="en-au">            <!--<![endif]-->
 <head>
   <%= render 'shared/auth' if Rails.env.production? || Rails.env.uat? %>
   <base href="<%= request.path %>">
