Change 'background-position' for storefront banner - WSF-5786

--- a/app/assets/stylesheets/partials/modules/_storefront.scss
+++ b/app/assets/stylesheets/partials/modules/_storefront.scss
@@ -18,17 +18,12 @@
 
   /* Flexslider */
   .flexslider {
-    background-position: 50% 50%;
+    background-position: 0 50%;
     background-repeat: no-repeat;
     background-size: cover;
 
     /* When there is no store banner */
     &.is-no-store-banner {@include linear-gradient($color-med-txt, $color-dark-txt);}
-
-    /* Old IE */
-    @include old-ie {
-      background-position: 30% 50%;
-    }
 
     /* Slides */
     .slides > li {
