WSF-5632: Added checks for whether data is present

--- a/app/views/centre_info/_parking_complimentary.html.erb
+++ b/app/views/centre_info/_parking_complimentary.html.erb
@@ -7,6 +7,6 @@
       <% end %>
     </div>
 
-    <%= render partial: "parking_info" %>
+    <%= render partial: "parking_info" if @parking.info? %>
   </div>
 </div>
