--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -2,6 +2,7 @@
   <div class="map-micello__overlay__retailer map-micello__mrg-base">
     <%% if(obj.logo) { %>
       <div class="map-micello__overlay__retailer__img">
+        <%% map.micello.Map.logoOptions.alt = name + ' logo' %>
         <%%= $.cloudinary.fetch_image(logo, map.micello.Map.logoOptions)[0].outerHTML %>
       </div>
     <%% } %>
