Converting all applicable image to WebP - WSF-5729

--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -38,7 +38,8 @@
             :html_width => 120,
             :html_height => 130,
             :alt => "Photo of #{@centre.short_name} shopping centre",
-            :onerror => "this.remove();"
+            :onerror => "this.remove();",
+            :fetch_format => 'auto'
           %>
         </div>
         <div class="slats__body islet">
