--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -38,7 +38,7 @@
           </div>
 
           <div class="grid__item non-palm-one-half">
-             <%= image_tag 'concierge.jpg', alt: '', quality: 25 %>
+             <%= image_tag 'concierge.jpg', alt: '', quality: 25, fetch_format: 'auto' %>
           </div>
        </div>
       </div>
@@ -49,7 +49,7 @@
    <div class="spacing spacing--dbl">
       <div class="grid grid--gutter-dbl">
         <div class="grid__item non-palm-one-half">
-          <%= image_tag 'gift-cards.jpg', alt: '', quality: 25 %>
+          <%= image_tag 'gift-cards.jpg', alt: '', quality: 25, fetch_format: 'auto' %>
         </div>
 
         <div class="grid__item non-palm-one-half">
