--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -41,9 +41,9 @@
               <a href="<%= centre_movie_path(centre_id: @centre.code, id: movie.id) %>">
                 <div class="tile__image">
                   <% if movie.cloudinary_public_id %>
-                    <%= cl_image_tag(movie.cloudinary_public_id, alt:"#{movie.title} picture", width: 568, crop: 'limit', quality: 25, format: 'jpg') %>
+                    <%= cl_image_tag(movie.cloudinary_public_id, alt:"#{movie.title} movie picture", width: 578, crop: 'limit', quality: 25, format: 'jpg', fetch_format: 'auto') %>
                   <% else %>
-                    <%= image_tag 'placeholder-movie.jpg', alt: '', quality: 50 %>
+                    <%= image_tag 'placeholder-movie.jpg', alt: '', quality: 70, fetch_format: 'auto' %>
                   <% end %>
                 </div>
                 <div class="tile__meta">
