--- a/app/views/shared/_hero_custom_styles.html.erb
+++ b/app/views/shared/_hero_custom_styles.html.erb
@@ -2,17 +2,17 @@
   <style>
     <%# Hero image at this breakpoint (small) %>
     @media (max-width: 25em) {
-        <%= target %> {background-image: url(<%= asset_path("heroes/#{image}-sml.jpg") %>);}
+        <%= target %> {background-image: url(<%= image_path("heroes/#{image}-sml.jpg", fetch_format: 'auto') %>);}
     }
     <%# Hero image at this breakpoint (medium) %>
     @media (min-width: 25.0625em) and (max-width: 48em) {
-        <%= target %> {background-image: url(<%= asset_path("heroes/#{image}-med.jpg") %>);}
+        <%= target %> {background-image: url(<%= image_path("heroes/#{image}-med.jpg", fetch_format: 'auto') %>);}
     }
     <%# Hero image at this breakpoint (large) %>
     @media (min-width: 48.0625em) {
-        <%= target %> {background-image: url(<%= asset_path("heroes/#{image}-lrg.jpg") %>);}
+        <%= target %> {background-image: url(<%= image_path("heroes/#{image}-lrg.jpg", fetch_format: 'auto') %>);}
     }
     <%# Old IE %>
-    .old-ie <%= target %> {background-image: url(<%= asset_path("heroes/#{image}-lrg.jpg") %>);}
+    .old-ie <%= target %> {background-image: url(<%= image_path("heroes/#{image}-lrg.jpg") %>);}
   </style>
 <% end %>
