WSF-5374: Fix up alt attr for deal and product tiles

--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -2,7 +2,7 @@
   <% if result.logo %>
     <span class="tile__meta__image">
       <%= fetch_image_tag result.logo,
-        alt: "#{result.name} logo",
+        alt: "#{result.store_name} logo",
         width: 168,
         height: 62,
         crop: :pad,
