--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -2,7 +2,7 @@
   <%# FIXME There is something causing some images in beta not to load if the cl_image_tag is used here %>
   <%= fetch_image_tag result.primary_image, {
       'data-height' => result.image_height,
-      alt: "Photo of product: #{result.title}",
+      alt: "Photo of product: #{result.name}",
       width: 288,
       crop: :limit,
       format: :auto
