--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -16,7 +16,7 @@
     <%# Container %>
     <div class="container container--position">
       <%# Logo %>
-      <%= image_tag image_path('logo-white.svg'), alt: 'Westfield', "data-svg-fallback" => image_path('logo-white.png'), class: 'national__logo' %>
+      <%= image_tag image_path('logo-white-beta.svg'), alt: 'Westfield', "data-svg-fallback" => image_path('logo-white-beta.png'), class: 'national__logo' %>
       <%# //Logo %>
 
       <%# Hero heading wrap %>
