Adding 'See nearby centres' text to the no content fallback message

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
   <%# No Movies fallback message %>
   <div class="no-content-fallback-msg no-content-fallback-msg--flush">
     <span class="icon icon--video icon--flush-top" aria-hidden="true"></span>
-    <p><em class="h1">No movies at this centre</em></p>
+    <p><em class="h1">No movies at this centre</em> <span>See nearby centres</span></p>
   </div>
   <%# //No Movies fallback message %>
 
