Adding double quotation marks to the applied filters and no search result query

--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -3,7 +3,7 @@
   <%# No product search results message %>
   <div class="no-content-fallback-msg">
     <span class="icon icon--products icon--flush-top" aria-hidden="true"></span>
-    <p role="status" aria-live="polite"><em class="h1">No products matching <span><%= params[:search_query] %></span></em> <span>See nearby centres</span></p>
+    <p role="status" aria-live="polite"><em class="h1">No products matching <span>"<%= params[:search_query] %>"</span></em> <span>See nearby centres</span></p>
   </div>
   <%# //No product search results message %>
 
